--- a/packages/material-tailwind-react/package.json
+++ b/packages/material-tailwind-react/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@hkm-tailwind/react",
+  "name": "@hkm-material/react",
   "homepage": "https://github.com/jason-work-git/hkm_tailwind",
   "version": "0.0.1",
-  "description": "@hkm-tailwind/react is an easy-to-use components library for ReactJS & Tailwind CSS inspired by Material Design.",
+  "description": "@hkm-material/react is an easy-to-use components library for ReactJS & Tailwind CSS inspired by Material Design.",
   "repository": "https://github.com/jason-work-git/hkm_tailwind",
   "license": "MIT",
   "main": "index.js",
